force-app/main/default/objects/Ticket_Usage__c/Ticket_Usage__c.object-meta.xml
<CustomObject>
    <description>Tracks usage of tickets requested through Concierge Live</description>
    <label>Ticket Usage</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Ticket Usage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TicketUsages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>