force-app/main/default/objects/Ticket_Usage__c/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>