force-app/main/default/objects/Ticket_Usage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact who received the Ticket</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ticket Usages</relationshipLabel>
    <relationshipName>TicketUsages</relationshipName>
    <type>Lookup</type>
</CustomField>