force-app/main/default/objects/Ticket_Usage__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Name of the Event the ticket was used for.</description>
    <label>Event Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>