force-app/main/default/objects/Ticket_Usage__c/fields/ObjectId__c.field-meta.xml
<CustomField>
    <fullName>ObjectId__c</fullName>
    <label>ObjectId</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>