force-app/main/default/objects/Ticket_Usage__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the person who requested the tickets</description>
    <label>Requester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TicketUsages</relationshipName>
    <type>Lookup</type>
</CustomField>