force-app/main/default/objects/Ticket_Usage__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <label>Row</label>
    <length>120</length>
    <type>Text</type>
</CustomField>